--- a/class1-Introduction to Tensorflow .ipynb
+++ b/class1-Introduction to Tensorflow .ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result = tf.multiply(x1,x2)"
@@ -46,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Mul_1:0' shape=() dtype=int32>"
+       "<tf.Tensor 'Mul:0' shape=() dtype=int32>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const_4:0' shape=() dtype=int32>"
+       "<tf.Tensor 'Const:0' shape=() dtype=int32>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Const_5:0' shape=() dtype=int32>"
+       "<tf.Tensor 'Const_1:0' shape=() dtype=int32>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Session() \n",
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +133,7 @@
        "30"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = tf.add(x1,x2)"
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +164,7 @@
        "11"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -178,8 +186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# after closing session , it will not execute the grap\n",
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -206,8 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#in obove method the current session closes automatically after exiting the loop, \n",
@@ -217,14 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Const_4:0\", shape=(), dtype=int32)\n"
+      "Tensor(\"Const:0\", shape=(), dtype=int32)\n"
      ]
     }
    ],
@@ -234,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#placeholder()\n",
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -318,8 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# #Varaible()\n",
@@ -333,8 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "W = tf.Variable(tf.zeros([2, 1]), name=\"weights\")\n"
@@ -342,8 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "W = tf.Variable([.3], dtype=tf.float32)\n",
@@ -355,8 +375,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "init = tf.global_variables_initializer()\n",
@@ -366,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +404,7 @@
        "(4,)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -418,8 +440,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#lets assign prefect premeasured values and test this\n",
@@ -434,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -447,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -469,9 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
