tensorflow basics and practice

--- a/class2 - Basics of Tensorflow.ipynb
+++ b/class2 - Basics of Tensorflow.ipynb
@@ -179,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = tf.constant(5, name=\"input_a\")\n",
