tensorflow practice, gold example

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = tf.placeholder(dtype='int32',name='x_input')\n",
@@ -84,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sess = tf.Session()\n",
@@ -98,16 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n",
-      "16\n",
-      "261120\n"
+     "ename": "NameError",
+     "evalue": "name 'e_var' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-05fb81ef982a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me_var\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me_var1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me_var2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'e_var' is not defined"
      ]
     }
    ],
@@ -115,6 +121,202 @@
     "print(e_var)\n",
     "print(e_var1)\n",
     "print(e_var2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([25, 42, 74, 14, 35, 18, 48, 22,  1, 43, 60, 46, 22, 44, 47,  4, 25,\n",
+       "       71, 33, 65,  6,  1, 21, 40, 23])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(75, size=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [y[0] for y in iris.data]\n",
+    "[i for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,np.nan])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "correlate() missing 1 required positional argument: 'v'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-bccf351513b8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcorrelate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: correlate() missing 1 required positional argument: 'v'"
+     ]
+    }
+   ],
+   "source": [
+    "np.correlate(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function correlate in module numpy.core.numeric:\n",
+      "\n",
+      "correlate(a, v, mode='valid')\n",
+      "    Cross-correlation of two 1-dimensional sequences.\n",
+      "    \n",
+      "    This function computes the correlation as generally defined in signal\n",
+      "    processing texts::\n",
+      "    \n",
+      "        c_{av}[k] = sum_n a[n+k] * conj(v[n])\n",
+      "    \n",
+      "    with a and v sequences being zero-padded where necessary and conj being\n",
+      "    the conjugate.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a, v : array_like\n",
+      "        Input sequences.\n",
+      "    mode : {'valid', 'same', 'full'}, optional\n",
+      "        Refer to the `convolve` docstring.  Note that the default\n",
+      "        is 'valid', unlike `convolve`, which uses 'full'.\n",
+      "    old_behavior : bool\n",
+      "        `old_behavior` was removed in NumPy 1.10. If you need the old\n",
+      "        behavior, use `multiarray.correlate`.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    out : ndarray\n",
+      "        Discrete cross-correlation of `a` and `v`.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    convolve : Discrete, linear convolution of two one-dimensional sequences.\n",
+      "    multiarray.correlate : Old, no conjugate, version of correlate.\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    The definition of correlation above is not unique and sometimes correlation\n",
+      "    may be defined differently. Another common definition is::\n",
+      "    \n",
+      "        c'_{av}[k] = sum_n a[n] conj(v[n+k])\n",
+      "    \n",
+      "    which is related to ``c_{av}[k]`` by ``c'_{av}[k] = c_{av}[-k]``.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> np.correlate([1, 2, 3], [0, 1, 0.5])\n",
+      "    array([ 3.5])\n",
+      "    >>> np.correlate([1, 2, 3], [0, 1, 0.5], \"same\")\n",
+      "    array([ 2. ,  3.5,  3. ])\n",
+      "    >>> np.correlate([1, 2, 3], [0, 1, 0.5], \"full\")\n",
+      "    array([ 0.5,  2. ,  3.5,  3. ,  0. ])\n",
+      "    \n",
+      "    Using complex sequences:\n",
+      "    \n",
+      "    >>> np.correlate([1+1j, 2, 3-1j], [0, 1, 0.5j], 'full')\n",
+      "    array([ 0.5-0.5j,  1.0+0.j ,  1.5-1.5j,  3.0-1.j ,  0.0+0.j ])\n",
+      "    \n",
+      "    Note that you get the time reversed, complex conjugated result\n",
+      "    when the two input sequences change places, i.e.,\n",
+      "    ``c_{va}[k] = c^{*}_{av}[-k]``:\n",
+      "    \n",
+      "    >>> np.correlate([0, 1, 0.5j], [1+1j, 2, 3-1j], 'full')\n",
+      "    array([ 0.0+0.j ,  3.0+1.j ,  1.5+1.5j,  1.0+0.j ,  0.5+0.5j])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(np.correlate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
    ]
   }
  ],
